--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 axum = "0.6.20"
 regex = "1.9.5"
+serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
