--- a/server_testing/Cargo.toml
+++ b/server_testing/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 axum = "0.6.20"
 regex = "1.9.5"
 serde = { version = "1.0.188", features = ["derive"] }
+string = "0.3.0"
 tokio = { version = "1.32.0", features = ["full"] }
